# swdFirmwareExtractor

./: .gitignore  CMakeLists.txt  Makefile  RC.elf  RC.hex  RC.ioc  README.md  swd-extractor.ioc
Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.h  stm32l1xx_hal_conf.h  swd.h  target.h  uart.h
Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32l1xx_hal_msp.c  swd.c  target.c  uart.c
cli/: client.py
